# APT_insight

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  app.py  chainlit.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
agents/: __init__.py  chart_tools.py  config.py  graph.py  map_tools.py  news_agent.py  rag_agent.py  sql_agent.py
dash_app/: app.py  charts.py  config.py  db.py  geo_names.py  theme.py
dash_app/assets/: chat_enter.js  choropleth_style.js  colors_and_type.css  kit_dashboard.css
dash_app/callbacks/: filters.py  navigation.py  theme.py
dash_app/components/: choropleth_map.py  empty_state.py  filter_panel.py  formatters.py  kpi_card.py  ranking_table.py  sidebar.py  status_banner.py  term_tip.py
dash_app/glossary/: __init__.py  terms.py
dash_app/pages/: _skeleton.py  about.py  complex.py  gap.py  home.py  insight.py  invest.py  region.py
dash_app/queries/: coverage_queries.py  gap_queries.py  invest_queries.py  mapping_queries.py  metrics_queries.py  news_queries.py  nv_queries.py  rt_queries.py
data/maps/: metro_sgg.geojson
docs/: DEVELOPMENT_PLAN.md
pipeline/: build_mapping.py  collect_naver.py  collect_news.py  collect_rt.py  ingest_pdf.py  lawd.py  naver_session.py  run_daily.py  schemas.py  update_daily.py  update_nv_daily.py  update_rt_daily.py  utils.py
public/: custom.css  custom.js
scripts/: add_sgg_columns.py  check_geojson.py  check_sgg_names.py  init_db.py  migrate_unique_constraints.py  rebuild_metro_geojson.py  restore_fk.py
shared/: config.py  db.py
tests/: conftest.py  test_smoke.py
(+25 files in other folders)
